:heavy_plus_sign: Add: Bootstrap

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/juliandamass/enamdua.git",
   "author": "Julian Damas Suryawan <juliandamass@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^5.1.3"
+  }
 }
